--- a/bc/_1-iteration/_base/number.html
+++ b/bc/_1-iteration/_base/number.html
@@ -11,9 +11,17 @@
    *
    * @param x
    */
+
+
   function number(x) {
-    // TODO implement
+    if(typeof x === 'number' && !isNaN(x)){
+      return x
+    }throw new TypeError('Number expected')
   }
+
+
+
+
   QUnit.test('Throws for non numbers', function (assert) {
     var data = [
       'a',
