--- a/bc/_1-iteration/_base/concat.html
+++ b/bc/_1-iteration/_base/concat.html
@@ -9,9 +9,26 @@
    * Returns concatenation of all strings passed to it.
    * Throws 'String expected' if any of arguments is not one.
    */
-  function concat() {
-    // TODO implement
+
+
+  function str(a){
+    if(typeof a !== 'string')
+    {throw new TypeError("String expected")
+    }else{
+      return a}
   }
+
+
+  function concat(){
+    var result = '';
+    for (i=0;i<arguments.length;i+= 1){
+      result += str(arguments[i])
+
+    }return result;
+  }
+
+
+
   QUnit.test('Concat strings', function (assert) {
     assert.throws(function () {
       concat('a', 2);
