--- a/bc/_1-iteration/_base/sumArray.html
+++ b/bc/_1-iteration/_base/sumArray.html
@@ -10,9 +10,28 @@
    *
    * @param numbers - array of numbers
    */
-  function sumArray(numbers) {
-    // TODO implement
+
+
+
+  function numb(a){
+    if(typeof a !== 'number')
+    {throw new TypeError("Number expected")
+    }else{
+      return a}
   }
+
+
+  function sumArray(numbers) {
+    var result = 0;
+    for (i=0;i<numbers.length;i+=1) {
+      result += numb(numbers[i]);
+    }
+    return result;
+  }
+
+
+
+
   QUnit.test('Sum an array of integers', function (assert) {
     assert.throws(function () {
       sumArray(['a', 2]);
