students / notes ect

--- a/bc/_2-data-transformation/_base/studentNames.html
+++ b/bc/_2-data-transformation/_base/studentNames.html
@@ -11,9 +11,15 @@
    *
    * @param students
    */
+
+
   function getStudentNames(students) {
-    // TODO implement
+    return students.map(function(x){
+      return x.name
+    })
   }
+
+
   QUnit.test('Get student names', function (assert) {
     assert.deepEqual(
       getStudentNames(data.students),
