--- a/bc/_2-data-transformation/_base/studentsWithTopNotes.html
+++ b/bc/_2-data-transformation/_base/studentsWithTopNotes.html
@@ -11,13 +11,30 @@
    *
    * @param students
    */
+
+
+
   function getStudentTopNotes(students) {
-    // TODO implement
+    return students.map(function(x){
+      return {
+        id: x.id,
+        name: x.name,
+        topNote: Math.max.apply(null, x.notes)
+      }
+    })
+
+
   }
+
+
+
+
   QUnit.test('Get top notes', function (assert) {
     assert.deepEqual(
       getStudentTopNotes(data.students),
       [5, 5, 4]
     );
   });
+
 </script>
+
