--- a/bc/_2-data-transformation/_base/studentWithMostFavs.html
+++ b/bc/_2-data-transformation/_base/studentWithMostFavs.html
@@ -12,9 +12,29 @@
    * @param students
    * @param favoriteTracks
    */
+
+
   function getStudentWithMostFavs(students, favoriteTracks) {
-    // TODO implement
+
+    return students.map(function (x) {
+      return {
+        id: x.id,
+        name: x.name,
+        notes: x.notes,
+        favoriteTracks: favoriteTracks.find(function(a){
+          return a.studentId === x.id}).tracks
+      }
+    }).reduce(function (one, two) {
+
+      return one.favoriteTracks.length > two.favoriteTracks.length
+        ? one
+        : two
+    })
+
   }
+
+
+
   QUnit.test('Get student with most favs', function (assert) {
     assert.deepEqual(
       getStudentWithMostFavs(data.students, data.favoriteTracks),
